[gd_scene load_steps=6 format=3 uid="uid://d1x302n8dm5e4"]

[ext_resource type="FontFile" uid="uid://c6pr7yv4foly1" path="res://PeaberryBase.ttf" id="1_a02vk"]
[ext_resource type="Script" path="res://scenes/MainMenu.gd" id="1_fhmig"]

[sub_resource type="LabelSettings" id="LabelSettings_2wx0y"]
font = ExtResource("1_a02vk")
font_size = 27

[sub_resource type="LabelSettings" id="LabelSettings_v4rjh"]
font_size = 6

[sub_resource type="LabelSettings" id="LabelSettings_cgr1t"]
font_size = 6

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fhmig")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 13.0
offset_bottom = 44.0
grow_horizontal = 2
text = "Elementora"
label_settings = SubResource("LabelSettings_2wx0y")
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -12.0
offset_right = 35.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="StartMenu" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0.980392, 0.992157, 1)
text = "Start"
label_settings = SubResource("LabelSettings_v4rjh")
horizontal_alignment = 1

[node name="QuitMenu" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"
label_settings = SubResource("LabelSettings_cgr1t")
horizontal_alignment = 1
